# gcalc

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  SimpleCalculatorStatus.cpp  SimpleCalculatorStatus.h
